--- a/src/containers/SearchPage/SearchFiltersMobile/SearchFiltersMobile.module.css
+++ b/src/containers/SearchPage/SearchFiltersMobile/SearchFiltersMobile.module.css
@@ -42,7 +42,7 @@
 }
 
 .modalHeading {
-  composes: h1 from global;
+  composes: marketplaceModalTitleStyles from global;
   margin-top: 0;
 }
 
