--- a/src/styles/marketplaceDefaults.css
+++ b/src/styles/marketplaceDefaults.css
@@ -1366,7 +1366,7 @@ textarea {
 /* Modal title */
 .marketplaceModalTitleStyles {
   font-weight: var(--fontWeightBold);
-  font-size: 26px;
+  font-size: 35px;
   line-height: 36px;
   margin: 0;
 
